# financial-multiagent-rag

./: .gitignore  app.py  config.yaml  ingest.py  private_README.md  pyproject.toml  rag_agent.py  utils.py
config/: config.yaml
config/data/: data_01.yaml
config/models/: models_01.yaml
config/pre_proc/: pre_proc_01.yaml
config/prompts/: prompts_01.yaml
data/: my_knowledge.txt
data/intermediate_files/: table_descriptions.json
misc/: misc_exploration.py  mistral_models_list.py
src/pre_processing/: decon_make_db.py  fetch_parse_data.py  pre_processing.py  process_tables.py
src/rag_pipeline/: rag_agent.py
src/utils/: utils.py
