[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.5.1",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.1.3",
    "langchain-mistralai>=1.1.1",
    "langchain-ollama>=1.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
]
